<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/nkf_layout_keywords"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
		        android:id="@+id/nkf_listview"
		        android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
		        
        <LinearLayout
            android:id="@+id/nkf_subscribe_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_alignParentBottom="true" >

            <View
		            android:layout_width="match_parent"
		            android:layout_height="1px"
		            android:layout_marginBottom="5dp"
		            android:background="@android:color/black" />
            
            <RadioButton
                android:id="@+id/nkf_only_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/subscription_only_app"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/nkf_app_and_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscription_app_and_email"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/nkf_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:visibility="gone" >

                <ProgressBar
                    android:id="@+id/nkf_email_progress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:indeterminateOnly="true"
                    android:visibility="invisible" />
                
                <EditText
                    android:id="@+id/nkf_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/DarkRed"
                    android:hint="@string/email_hint" />
                
                <Button
                    android:id="@+id/nkf_email_validate"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:text="@string/email_validate"
                    android:textSize="13sp"
                    android:enabled="false" />

            </LinearLayout>
            
            <Button
                android:id="@+id/nkf_subscribe"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_default"
                android:freezesText="false"
                android:gravity="center"
                android:padding="@dimen/shadow_size"
                android:text="@string/subscribe"
                android:textSize="15sp"
                android:minWidth="150dp" />
        
	      </LinearLayout>
	      
    </LinearLayout>
    
    <TextView
        android:id="@+id/nkf_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/list_empty"
        android:visibility="gone" />

</FrameLayout>