<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ufs="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_vertical|left|top"
    android:orientation="vertical" >

    <com.ufsic.core.widgets.ActionBarUfs
        android:id="@+id/pr_action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        ufs:left_btn="@drawable/btn_back_selector" >
    </com.ufsic.core.widgets.ActionBarUfs>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/base_margin"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/pr_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@+id/pr_frame_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/pr_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="10dp" />

                <ProgressBar
                    android:id="@+id/pr_progress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminateOnly="true"
                    android:visibility="invisible" />
                
            </FrameLayout>

            <TextView
                android:id="@+id/pr_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="5dp"
                android:gravity="center" />

            <FrameLayout
                android:id="@+id/pr_frame_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" >

                <TextView
                    android:id="@+id/pr_countdown"
                    android:layout_width="107dp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="right"
                    android:gravity="center"
                    android:textColor="#006e2e"
                    android:textSize="23sp"
                    android:textStyle="bold" />
                
                <CheckBox
		                android:id="@+id/pr_check"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="left"
		                android:gravity="center_vertical|start"
		                android:text="@string/promotion_agreement" />
                
            </FrameLayout>

            <Button
                android:id="@+id/pr_accept"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="240dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_default"
                android:freezesText="false"
                android:gravity="center"
                android:padding="@dimen/shadow_size"
                android:text="@string/promotion_accept"
                android:textSize="15sp" />

            <Button
                android:id="@+id/pr_reject"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="220dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_default"
                android:freezesText="false"
                android:gravity="center"
                android:padding="@dimen/shadow_size"
                android:text="@string/promotion_reject"
                android:textSize="15sp"
                android:visibility="invisible" />
            
        </LinearLayout>

    </ScrollView>

</LinearLayout>